--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
             <div class="rede-base">
                 <div class="rede">
-                    <a href="" class="a-redes">GITHUB</a>
+                    <a href="https://github.com/Luan9729?tab=repositories" class="a-redes">GITHUB</a>
                 </div>
             </div>
         </div>
@@ -286,6 +286,7 @@
 
 
 </body>
+
 
 
 
